# AutoDocX

./: .env copy  .env.example  .flake8  .gitignore  MANIFEST.in  README.md  __init__.py  cli.py  config.yaml  create_init_to_all_directories.py  dir.md  m.md  main.py  open_AutoDocX.bat  pyproject.toml  requirements.txt  root.py  run_AutoDocX.bat  setup.py
.github/workflows/: auto-docs.yml
autodocx/ai/: ai_instructions.py  prompt_engine.py  text_generator.py  text_generator_simulate.py
autodocx/cli_commands/: docx.py
autodocx/core/: initialize.py  main copy.py  process_controller.py  workflow_manager.py
autodocx/generators/: __init__.py  doc_generator.py  structure_validator.py
autodocx/generators/formatters/: __init__.py  html_formatter.py  json_formatter.py  markdown_formatter.py
autodocx/helpers/: config_manager.py  file_handler.py  file_operations.py  logger.py  string_utils.py
autodocx/model/: __init__.py  llm_models.py
autodocx/parsers/: __init__.py  code_parser.py  comment_extractor.py  metadata_parser.py
autodocx/scanners/: dependency_tracker.py  file_analyzer.py
autodocx/utils/: checklist_manager.py  state_manager.py
autodocx/validators/: __init__.py
scripts/: deploy.py  run_tests.py  setup_env.py
src/: __init__.py
src/ai/: __init__.py  ai_instructions.py  prompt_engine.py  text_generator.py  token_optimizer.py
src/cli_commands/: __init__.py  docx.py
src/core/: __init__.py  initialize.py  main.py  process_controller.py  task_dispatcher.py  workflow_manager.py
src/generators/: __init__.py  doc_generator.py  structure_validator.py
src/generators/formatters/: __init__.py  html_formatter.py  json_formatter.py  markdown_formatter.py
src/helpers/: __init__.py  config_manager.py  file_handler.py  file_operations.py  logger.py  string_utils.py
src/model/: llm_models copy.py  llm_models.py
src/parsers/: __init__.py  code_parser.py  comment_extractor.py  metadata_parser.py
src/scanners/: __init__.py  dependency_tracker.py  file_analyzer.py  workspace_scanner.py
src/utils/: __init__.py  checklist_manager.py  dependency_manager.py  progress_tracker.py  state_manager.py
src/validators/: __init__.py  doc_consistency.py  syntax_checker.py  validator_manager.py
