[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewnozom-autodocx"
version = "0.2.61"
authors = [
    { name="Tobias Raanaes", email="tobraa92@gmai.com" },
]
description = "Automatiserad Dokumentationsgenerator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "anthropic>=0.18.1",
    "openai>=1.12.0",
    "langchain-anthropic>=0.0.4",
    "langchain-openai>=0.0.2",
    "langchain-groq>=0.0.1",
    "pydantic>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "autoflake>=2.2.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12.12",
    "types-requests>=2.31.0.20240106"
]

[project.urls]
"Homepage" = "https://github.com/rewnozom/AutoDocX"
"Bug Tracker" = "https://github.com/rewnozom/AutoDocX/issues"

[project.scripts]
docx = "main:main"

[tool.setuptools]
py-modules = ["main", "cli"]
packages = ["autodocx"]

[tool.setuptools.package-data]
autodocx = ["**/templates/*", "**/static/*"]